--- a/styles/global.css
+++ b/styles/global.css
@@ -1,38 +1,40 @@
-*,
-*::before,
-*::after {
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  width: 1100px;
+html, body {
+  height: 100%;
+  font-family: "Inter", sans-serif;
+  background-color: #ffffff;
+  color: #000000;
+  min-width: 1100px;
+  max-width: 1440px;
   margin: 0 auto;
-  font-family: Raleway, sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul,
-ol,
-li,
-blockquote {
-  margin: 0;
-  padding: 0;
 }
 
 a {
   color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
 
 img {
-  width: 100%;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-button {
-  font: inherit;
+p {
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+h1, h2, h3 {
+  font-family: "EB Garamond", serif;
+  font-weight: 700;
 }
