--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,9 @@
+/* HEADER */
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   padding: 92px 49px 96px 51px;
-  max-width: 1440px;
-  margin: 0 auto;
 }
 
 .header__menu {
@@ -14,25 +13,16 @@
 .header__links-list {
   display: flex;
   gap: 32px;
-  list-style: circle;
   font-size: 18px;
   line-height: 21.6px;
-}
-
-.header__links-list-item_no-bullit {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .header__link {
-  text-decoration: none;
-  color: #000;
   text-transform: lowercase;
 }
-
-.footer__menu-link_active {
-  text-decoration: underline;
-}
-
 
 .header__logo {
   justify-self: center;
@@ -45,24 +35,23 @@
   font-style: normal;
   font-size: 18px;
   line-height: 24.3px;
-  text-align: left;
-  color: #000;
   max-width: 240px;
 }
 
+/* COVER */
 .cover {
   position: relative;
   background-image: url("../images/cover.jpg");
   background-size: cover;
   background-position: center;
-  color: #fff;
-  padding: 165px 50px 51px 50px;
+  color: white;
+  padding: 165px 50px 60px;
 }
 
 .overlay {
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.6);
+  background: rgba(0,0,0,0.6);
   z-index: 1;
 }
 
@@ -73,72 +62,58 @@
   font-size: 100px;
   font-weight: 700;
   text-transform: uppercase;
-  line-height: 115px;
-  letter-spacing: 0.3em;
+  line-height: 1.05;
+  margin-bottom: 80px;
 }
 
-.aligned-text {
-  display: block;
-  margin-bottom: 20px;
-}
-
-.aligned-text_center {
-  text-align: center;
-}
-
-.aligned-text_right {
-  text-align: right;
-}
+.aligned-text { display: block; }
+.aligned-text_center { text-align: center; }
+.aligned-text_right { text-align: right; }
 
 .cover__description {
   position: relative;
   z-index: 2;
-  margin-top: 135px;
+  margin-top: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .cover__description-text {
-  font-family: "Inter", sans-serif;
   font-size: 22px;
   text-transform: uppercase;
   letter-spacing: 0.05em;
 }
 
 .bet-button {
-  font-family: "Inter", sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   text-transform: uppercase;
-  border: 1px solid #fff;
-  padding: 12px 32px;
-  background-color: transparent;
-  color: #fff;
+  padding: 15px 35px;
+  border: 1px solid white;
+  background: transparent;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: 0.3s;
 }
-
 .bet-button:hover {
-  background-color: #fff;
-  color: #000;
+  background: white;
+  color: black;
 }
 
+/* LOTS */
 .lots {
-  padding: 179px 50px 146px;
+  padding: 150px 50px;
 }
 
 .lots__heading {
-  font-family: "EB Garamond", serif;
   font-size: 40px;
   text-transform: uppercase;
-  margin-bottom: 27px;
+  margin-bottom: 30px;
 }
 
 .lots__card-list {
   display: flex;
-  flex-wrap: wrap;
   gap: 25px;
-  list-style: none;
+  flex-wrap: wrap;
   margin-bottom: 30px;
 }
 
@@ -147,72 +122,52 @@
   min-width: 430px;
 }
 
-.card-link {
-  display: block;
-  height: 100%;
-}
-
 .card {
   position: relative;
+  padding: 48px 40px;
+  min-height: 450px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   color: white;
-  padding: 48px 40px;
-  height: 100%;
   background-size: cover;
   background-position: center;
-  text-decoration: none;
-  min-height: 450px;
 }
 
 .card__title {
-  font-family: "EB Garamond", serif;
   font-size: 22px;
-  font-weight: 700;
-  line-height: 26.4px;
   text-transform: uppercase;
   text-decoration: underline;
   z-index: 2;
 }
 
 .card__text {
-  font-family: "Inter", sans-serif;
   font-size: 20px;
-  line-height: 24px;
   z-index: 2;
 }
 
-.card_type_film {
-  background-image: url("../images/card-lot-01.jpg");
-}
-
-.card_type_book {
-  background-image: url("../images/card-lot-02.jpg");
-}
-
-.card_type_picture {
-  background-image: url("../images/card-lot-03.jpg");
-}
+.card_type_film { background-image: url("../images/card-lot-01.jpg"); }
+.card_type_book { background-image: url("../images/card-lot-02.jpg"); }
+.card_type_picture { background-image: url("../images/card-lot-03.jpg"); }
 
 .lots__look-more-link {
-  font-family: "Inter", sans-serif;
   font-size: 20px;
+  border-bottom: 1px solid black;
   text-transform: uppercase;
-  border-bottom: 1px solid #000;
 }
 
+/* ABOUT */
 .about {
   display: grid;
   grid-template-columns: 430px 1fr;
+  padding: 35px 50px 160px;
   gap: 25px;
-  padding: 35px 50px 180px;
 }
 
 .about__logo {
   width: 240px;
   height: 240px;
-  background-color: #000;
+  background: black;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -226,38 +181,23 @@
 }
 
 .about__title {
-  font-family: "EB Garamond", serif;
   font-size: 40px;
   text-transform: uppercase;
-  margin-top: 100px;
+  margin-top: 80px;
   margin-bottom: 100px;
-}
-
-.about__text {
-  font-family: "Inter", sans-serif;
-  font-size: 20px;
-  line-height: 24px;
-  color: #000;
-  max-width: 885px;
 }
 
 .about__text p:not(:last-child) {
   margin-bottom: 25px;
 }
 
+/* FOOTER */
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: start;
   padding: 90px 50px;
-  font-family: "Inter", sans-serif;
   font-size: 18px;
-  line-height: 21.6px;
-}
-
-.footer .address {
-  font-style: normal;
-  max-width: 240px;
 }
 
 .footer__menu {
@@ -265,22 +205,11 @@
 }
 
 .footer__menu-list {
-  list-style: none;
   text-align: center;
-}
-
-.footer__menu-link {
-  text-decoration: none;
-  color: #000;
-  text-transform: lowercase;
-}
-
-.footer__menu-link_active {
-  text-decoration: underline;
+  list-style: none;
 }
 
 .footer__social-list {
-  list-style: none;
   display: flex;
   gap: 48px;
   justify-self: end;
