Ono tebe nado completed

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,9 +66,15 @@
   margin-bottom: 80px;
 }
 
-.aligned-text { display: block; }
-.aligned-text_center { text-align: center; }
-.aligned-text_right { text-align: right; }
+.aligned-text {
+  display: block; 
+}
+.aligned-text_center {
+  text-align: center;
+}
+.aligned-text_right {
+  text-align: right;
+}
 
 .cover__description {
   position: relative;
